fix hero font on mobile

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -22,7 +22,6 @@
  
   #hero .cs-picture-author img {
     margin-bottom: clamp(1.5em, 15.5vw, .5em);
-
     max-width: 300px;
     height: auto;
   }
@@ -71,7 +70,7 @@
   }
   #hero .cs-text {
     /* color: var(--bodyTextColorWhite); */
-    font-family: 'Archivo-Regular';
+    font-family: 'Archivo';
     /* 16px - 20px */
     font-size: clamp(1rem, 1.95vw, 1.25rem);
     line-height: 1.6em;
